fix scrollbar hidden

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -393,9 +393,6 @@ label::after {
     }
   }
 }
-.ant-table-body::-webkit-scrollbar {
-  display: none;
-}
 /* -----------------------------------------------------------
   Spacing
 ----------------------------------------------------------- */
